welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: not found: type False
while (estFaceMur:False) {avance()} 
                  ^